[package]
name = "biliroaming_rust_server"
version = "0.3.3"
edition = "2021"

[dependencies]
chrono = "0.4.44"
actix-web = {version = "4.13.0", features = ["rustls-0_23","compress-brotli","compress-gzip","compress-zstd"]}
actix-files = "0.6.10"
qstring = "0.7.2"
rust-crypto = "0.2.36"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
serde = {version = "1.0.228",features = ["derive"]}
deadpool = "0.13.0"
deadpool-redis = "0.23.0"
async-channel = "2.5.0"
futures = "0.3.32"
tokio = { version = "1.50.0", features = ["full"] }
pcre2 = "0.2.11"
ctrlc = "3.5.2"
rand = "0.10.0"
actix-governor = "0.10.0"
base64 = "0.22.1"
urlencoding = "2.1.3"
lazy_static = "1.5.0"
log = "0.4"
env_logger = "0.11.9"
reqwest = {version = "0.13.2",features = ["socks","brotli","gzip","deflate","rustls","json"]}
rustls = "0.23.37"
rustls-pemfile = "2.2.0"

[profile.fast]
inherits = "release"
opt-level = 3 
debug = false 
split-debuginfo = 'off' 
debug-assertions = false 
overflow-checks = false 
lto = true 
panic = 'unwind' 
incremental = false 
codegen-units = 1 
rpath = false
